--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "recoil": "^0.7.6"
   },
   "devDependencies": {
