--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@supabase/auth-helpers-nextjs": "^0.5.1",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.0.5",
     "framer-motion": "^7.3.6",
     "next": "12.3.1",
     "react": "18.2.0",
